[package]
name = "sssp-fast"
version = "0.1.0"
authors = ["PritRaj1 <prithvi@zscc.ai>"]
edition = "2026"
license-file = "LICENSE"
description = "Shortest-path and MST algorithms (Dijkstra, Bellman-Ford, A*, Floyd-Warshall, Prim) over nalgebra-typed buffers with reusable allocations."
repository = "https://github.com/PritRaj1/sp-fast"
homepage = "https://github.com/PritRaj1/sp-fast"
readme = "README.md"
keywords = ["graph", "shortest-path", "dijkstra", "mst", "algorithms"]
categories = ["algorithms", "science"]

[dependencies]
nalgebra = "0.33.2"
num-traits = "0.2"
rayon = "1.10"

[dev-dependencies]
plotters = "0.3.7"
gif = "0.13.1"
image = "0.25.6"
